# legalhub-backend

./: .env.example  .firebaserc  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile.faiss  Dockerfile.optimized  FINAL_YEAR_PROJECT_THESIS.md  PDF_MANAGEMENT_GUIDE.md  PRODUCTION_RECOMMENDATIONS.md  RAG_AI_ENGINE_AUDIT.md  RAG_SCRAPER_GUIDE.md  RAG_WEB_SCRAPER_GUIDE.md  README.md  RENDER_QUICKSTART.md  chapter3_system_diagrams.drawio  check_pdf_ingestion.py  docker-compose.yml  firebase-config.json  firebase.json  firestore.indexes.json  firestore.rules  firestore_inspection_report.json  frontend_debugging_guide.md  pyproject.toml  render.yaml  requirements-ai.txt  requirements-dev.txt  requirements-production.txt  requirements-rag.txt  requirements.txt  simple_chroma_test.py  temp_gemini_test.py  test_cameroon_scraper.py  test_pdf_embeddings.py  test_rag_ai_engine.py  test_rag_async.py  test_rag_comprehensive.py  test_rag_scraper.py  test_rag_system.py  thesis_diagrams.drawio  (+1 more)
app/: __init__.py  config.py  dependencies.py  main.py  prompts.py
chroma_db/: legalhub_documents.faiss  legalhub_documents_docs.pkl
dataconnect/: dataconnect.yaml
legahub.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scratch/: test_rag.py
scripts/: INDEX_DISTRIBUTION.md  audit_firestore_storage.py  audit_frontend_backend_firebase.py  batch_load_pdfs.py  check_index_size.py  check_user.py  delete_seeded_users.py  evaluate_rag_metrics.py  extract_pdf_texts.py  get_env_var.py  ingest_pdfs_direct.py  ingest_texts_direct.py  inspect_firestore.py  load_pdfs.py  prepare_index_for_git.ps1  seed_rag.py  (+16 more)
(+166 files in other folders)
