[project]
name = "legahub"
version = "0.1.0"
description = "FastAPI backend for Legahub prototype"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[standard]",
    "firebase-admin",
    "pydantic-settings"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
managed = true